--- a/assets/main.css
+++ b/assets/main.css
@@ -1,38 +1,35 @@
+@import url('https://fonts.googleapis.com/css?family=Lato:300,300italic,700,700italic');
+*:not(strong) {
+  font-weight: 300;
+  text-align: center;
+}
 body {
-	margin: 0px;
+  margin: 0px;
+  font-family: "Lato", sans-serif;
+}
+.outer {
+  text-align: center;
+  max-width: 850px;
+  margin: auto;
+  font-size: 18px;
+}
+.header {
+  font-size: 50px;
+  padding: 2vw 30px;
+}
+.inner {
+  padding: 20px;
+  line-height: 1.5;
+  background: #eeeeee;
+  font-size: 18px;
+  margin-bottom: 10px;
 }
 a {
-	text-decoration: none;
-	color: inherit;
+  padding: 20px;
+  display: inline-block;
+  text-decoration: none;
+  color: inherit;
 }
-header {
-	font-family: "Montserrat", "Open Sans", sans-serif;
-	font-weight: bold;
-	font-size: 10vw;
-	text-align: center;
-	padding: 5vw 0px;
-	background: #333;
-	color: white;
-}
-section {
-	padding: 2%;
-	max-width: 800px;
-	width: 96%;
-	margin: 0px auto;
-	font-family: "Open Sans", sans-serif;
-	font-weight: bold;
-}
-div {
-	margin-bottom: 10px;
-	padding: 1.5%;
-	text-align: center;
-	display: inline-block;
-	width: 29%;
-	background: white;
-	color: #333;
-	font-size: 18px;
-}
-div:hover {
-	color: white;
-	background: #333;
+a:not(.header-a):hover {
+  background: #fafafa;
 }
