--- a/assets/main.css
+++ b/assets/main.css
@@ -66,7 +66,7 @@ a {
   border: 1px solid #00a6ff;
   border-radius: 5px;
   margin: 10px 0px;
-  color: #333333;
+  color: #0095ee;
 }
 /*.project:hover {
   background: #BE8046;
